# Hanus

./: .gitignore  README.md  stack.yaml
janus/: .stylish-haskell.yaml  README.md  janus.cabal  report.html
janus/app/: Main.hs
janus/examples/: divide.hs  divide.janus  fibonacci.hs  run-length-encoding.hs  test1.janus  testcall.janus  testdiv.janus  testfib.janus  testfib0.janus  testif.janus  testrle.janus  testswap.janus
janus/results/: div_lg.html  div_loop.html  div_md.html  div_sm.html  fib_lg.html  fib_loop.html  fib_md.html  fib_sm.html  rle_lg.html  rle_loop.html  rle_md.html  rle_sm.html
janus/src/: AST.hs  Eval.hs  Lib.hs  QQ.hs  ReverseAST.hs  SemanticChecker.hs  StdLib.hs  TestEval.hs  TestWhileEval.hs  generated.hs  out.hs  test.hs
janus/src/Arith/: AST.hs  Eval.hs  Parser.hs  QQ.hs
janus/src/Parser/: HaskellParser.hs  JanusParser.hs
janus/src/StdLib/: ArrayIndexer.hs  BinaryTree.hs  DefaultValue.hs  DoubleOperator.hs  FieldIndexer.hs  Functor.hs  Maybe.hs  Operator.hs
janus/test/: Spec.hs  TArith.hs  TParser.hs  TQQ.hs  TSemanticChecker.hs  test.arith
janus/test/manual/: test1.janus
poster/: beamerthemeI6pd2.sty  poster.tex
poster/code/: call_uncall.hs  divide.hs  divide_reverse.hs  functor_usage.hs  semH.hs  semH_err.hs  semJ.hs  syntax.hs
presentation/: Makefile  beamer-template.tex  beamerthemeuucs.sty  slides.md
proposal/: proposal.tex  sources.bib
report/: report.tex
report/code/: divide.hs  fibonacci.hs  functor_def.hs  run-length-encoding.hs  semH.hs  semJ.hs  semJ_err.hs  syntax_err.hs
