name:                janus
version:             0.1.0.0
-- synopsis:
description:         Janus DSL
homepage:            https://github.com/joristt/Concepts-of-Program-Design-Practical
author:              Joris ten Tusscher, Joris Burgers, Ivo-Gabe de Wolff, Cas van der Rest, Orestis Melkonian
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Arith.AST, Arith.Parser, Arith.QQ
  build-depends:       base >= 4.7 && < 5
                     , optparse-applicative
                     , parsec >= 3.1
                     , template-haskell >= 2.9
                     , syb == 0.7
                     , haskell-src-meta
  default-language:    Haskell2010

executable janus
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , janus
                     , optparse-applicative
                     , parsec >= 3.1
  default-language:    Haskell2010

test-suite janus-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       TArith
  build-depends:       base
                     , janus
                     , test-framework
                     , test-framework-hunit
                     , HUnit
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/joristt/Concepts-of-Program-Design-Practical
